# Raspberry

./: LICENSE.md  README.md
DiseñoWeb/AnalogClock/css/: style.css
DiseñoWeb/CardPresentation/: index.html
DiseñoWeb/CardPresentation/css/: style.css
OpenCV/: OpenCVTutorial.md  README.md  build.sh
OpenCV/Canny/: CMakeLists.txt  CannyFilter.cpp  README.md  build.sh
OpenCV/FaceDetect/: CMakeLists.txt  FaceDetect.cpp  README.md  build.sh
OpenCV/FiltradoRGB/: README.md
OpenCV/Gaussiano/: FiltroGaussiano.cpp  README.md  build.sh
OpenCV/HistogramaContrasteYBrillo/: CMakeLists.txt  Histograma.cpp  README.md  build.sh
OpenCV/Imagen/: Imagen.cpp  README.md
OpenCV/Laplaciano/: CMakeLists.txt  FiltroLaplaciano.cpp  README.md  build.sh
OpenCV/RegionOfInterest(ROI)/: CMakeLists.txt  README.md  ROI.cpp  build.sh
Vision/FiltradoHSV/: FiltroHSV.cpp
Vision/FiltradoRGB/: CMakeLists.txt  Filtro.cpp  build.sh
Vision/Gaussiano/: CMakeLists.txt
Vision/Imagen/: CMakeLists.txt  Imagen.cpp  build.sh
Vision/Prueba/: CMakeLists.txt  Prueba.cpp
WebSites/AnalogClock/: index.html
WebSites/AnalogClock/js/: script.js
WebSites/CardPresentation/js/: script.js
WebSites/Weather/: index.html
WiringPI/1.Salidas/1.1.1_BlinkingLed/: 1.1.1_BlinkingLed.c  BlinkingLed
WiringPI/1.Salidas/1.1.2_7Segments/: 1.1.2_7Segments.c  7Segments
WiringPI/1.Salidas/1.1.7_LCD_I2C/: 1.1.7_LCD_I2C  1.1.7_LCD_I2C.c  README.md  liquidcrystal_i2c.c  liquidcrystal_i2c.h
WiringPI/2.Entradas/: 2.2.3_DHT11.c  DHT11
